add info box for app

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
         </div>
     </section>
 
+    <section class="card" id="card-mobile-app">
+        <h2> App Available! </h2>
+        <div class="div-app-icon">
+            <img src="/icons/icon-192.png" class="img-app-icon">
+            <b>Mölkkis</b>
+        </div>
+        <br>
+        </br>
+        Also available as web application to mobile.
+        Install by accepting the installation prompt or by adding to home screen manually.
+    </section>
+
     <section class="card">
         <ul class="list-rules">
             <h3>Rules:</h3>
@@ -93,7 +105,7 @@
 </main>
 
 <footer id="appFooter">
- <small>© 2025 Emil Suuronen // MölkkyBoard</small>
+ <small>© 2025 Emil Suuronen // MölkkyBoard // <a href="https://github.com/EmilSuuronen/molkky-board"> Github </a></small>
 </footer>
 
 <script src="script.js"></script>
