fix keyboard sizing

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="card" id="card-mobile-app">
         <h2> App Available! </h2>
         <div class="div-app-icon">
-            <img src="/icons/icon-192.png" class="img-app-icon">
+            <img src="./icons/icon-192.png" class="img-app-icon" alt="app-image">
             <b>Mölkkis</b>
         </div>
         <br>
