add rule card for placing logs

--- a/index.html
+++ b/index.html
@@ -60,6 +60,44 @@
         Install by accepting the installation prompt or by adding to home screen manually.
     </section>
 
+    <div class="card">
+        <section class="molkky-board">
+            <h3 class="molkky-title">Mölkky Setup</h3>
+
+            <div class="molkky-rows">
+                <!-- Row 1: 3 logs -->
+                <div class="molkky-row">
+                    <div class="log">7</div>
+                    <div class="log">9</div>
+                    <div class="log">8</div>
+                </div>
+
+                <!-- Row 2: 4 logs -->
+                <div class="molkky-row">
+                    <div class="log">5</div>
+                    <div class="log">11</div>
+                    <div class="log">12</div>
+                    <div class="log">6</div>
+                </div>
+
+                <!-- Row 3: 3 logs -->
+                <div class="molkky-row">
+                    <div class="log">3</div>
+                    <div class="log">10</div>
+                    <div class="log">4</div>
+                </div>
+
+                <!-- Row 4: 2 logs -->
+                <div class="molkky-row">
+                    <div class="log">1</div>
+                    <div class="log">2</div>
+                </div>
+            </div>
+
+            <p class="molkky-note">Throwing distance should be 3,5 meters</p>
+        </section>
+    </div>
+
     <section class="card">
         <ul class="list-rules">
             <h3>Rules:</h3>
@@ -105,7 +143,7 @@
 </main>
 
 <footer id="appFooter">
- <small>© 2025 Emil Suuronen // MölkkyBoard // <a href="https://github.com/EmilSuuronen/molkky-board"> Github </a></small>
+ <small>© 2025 Emil Suuronen // Mölkkis // <a href="https://github.com/EmilSuuronen/molkky-board"> Github </a></small>
 </footer>
 
 <script src="script.js"></script>
