--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" href="icons/icon-192.png">
+    <meta name="description" content="Mölkky sovellus pisteiden laskuun ja sääntöjen tarkastamiseen, myös mobiili-applikaatio!. / Free mölkky point scoring app for point scoring. Mobile application available" />
+    <meta name="keywords" content="mölkky, mölkky sovellus, mölkky scoreboard, mölkky app, mölkky pistelasku, mölkky tilasto, mölkky säännöt, mölkky rules" />
+    <meta property="og:title" content="Mölkky Sovellus – Online Scoreboard" />
+    <meta property="og:description" content="Helpoin pistelaskuri mölkkyyn. Scoreboard ja tilastot mobiilissa ja tietokoneella." />
+    <meta property="og:type" content="website" />
 </head>
 <body>
 
